--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>10 lệnh Git cơ bản mà một lập trình viên nào cũng cần biết</h1>
+    <p>Hướng dẫn chi tiết cách sử dụng 10 lệnh Git cơ bản</p>
 </body>
 </html>
