--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h2>10 lệnh Git cơ bản mà một lập trình viên nào cũng cần biết</h2>
     <p>Hướng dẫn chi tiết cách sử dụng 10 lệnh Git cơ bản</p>
+    <span>Test Status</span>
 </body>
 </html>
